--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
    <header class="main-header">
      <div class="header-top">
        <div class="header-top-wrapper container">
-         <a class="header-logo"><img src="img/icon/logo-technomart.svg" width="109" height="19" alt="Логотип магазина ТЕХНОМАРТ"></a>
+         <a class="header-logo"><img src="img/logo-technomart.svg" width="109" height="19" alt="Логотип магазина ТЕХНОМАРТ"></a>
          <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-          <input type="search" class="search-input" value="Поиск:" id="header-search">
+          <input class="search-input" type="search" value="Поиск:" id="header-search">
           <label for="header-search"><span class="visually-hidden">Поиск</span></label>
          </form>
          <ul class="header-list reset-list">
@@ -25,7 +25,7 @@
        </div>
      </div>
      <div class="header-content container">
-       <h1 class="header-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+       <h1 class="header-title">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
        <address class="header-contacts">
          <a class="header-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -181,14 +181,14 @@
         <input class="visually-hidden" type="radio" id="s-btn-3" name="service">
         <ul class="service-menu reset-list">
           <li>
-          <label class="service-menu-item" for="s-btn-1">Доставка</label>
+            <label class="service-menu-item" for="s-btn-1">Доставка</label>
           </li>
           <li>
-          <label class="service-menu-item" for="s-btn-2">Гарантия</label>
+            <label class="service-menu-item" for="s-btn-2">Гарантия</label>
           </li>
           <li>
-          <label class="service-menu-item" for="s-btn-3">Кредит</label>
-        </li>
+            <label class="service-menu-item" for="s-btn-3">Кредит</label>
+          </li>
         </ul>
         <div class="service-list">
           <div class="service-item service-item-1">
@@ -231,7 +231,7 @@
        <a class="contacts-image" href="#" aria-label="Открыть карту">
          <img src="img/map.jpg" width="300" height="158" alt="Карта">
        </a>
-       <a class="btn btn-basic" href="#">Заблудились? Напишите нам!</a>
+       <a class="btn btn-basic btn-write-us" href="#">Заблудились? Напишите нам!</a>
      </section>
    </div>
 
@@ -239,8 +239,8 @@
 
    <footer class="main-footer">
     <div class="footer-header container">
-      <div class="footer-contacts">
-        <a class="footer-logo"><img src="img/icon/logo-technomart.svg" width="138" height="23" alt="Логотип магазина ТЕХНОМАРТ"></a>
+      <div class="footer-top">
+        <a class="footer-logo"><img src="img/logo-technomart.svg" width="138" height="23" alt="Логотип магазина ТЕХНОМАРТ"></a>
         <address class="footer-contacts">
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           <a class="footer-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -322,7 +322,7 @@
         <button class="btn btn-basic" type="submit">Отправить</button>
       </div>
     </form>
-    <button class="modal-close" aria-label="Закрыть модальное окно"></button>
+    <button class="modal-close" aria-label="Закрыть модальное окно"><span></span></button>
   </section>
 
   <section class="modal modal-map">
@@ -330,8 +330,8 @@
       Как до нас добраться
     </h2>
     <img src="img/big-map.jpg" width="940" height="446" alt="Офис компании по адресу Большая Конюшенная 19/8, Санкт-Петербург">
-    <button class="modal-close" aria-label="Закрыть модальное окно"></button>
+    <button class="modal-close" aria-label="Закрыть модальное окно"><span></span></button>
   </section>
-
+  <script src="js/script.js"></script>
   </body>
 </html>
