--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <header class="main-header">
      <div class="header-top">
        <div class="header-top-wrapper container">
-         <a href="index.html" class="header-logo"><img src="img/icon/logo-technomart.svg" width="109" height="19" alt="Логотип магазина ТЕХНОМАРТ"></a>
+         <a href="index.html" class="header-logo"><img src="img/logo-technomart.svg" width="109" height="19" alt="Логотип магазина ТЕХНОМАРТ"></a>
          <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <input type="search" class="search-input" value="Поиск:" id="header-search">
           <label for="header-search"><span class="visually-hidden">Поиск</span></label>
@@ -25,9 +25,9 @@
        </div>
      </div>
      <div class="header-content container">
-       <h1 class="header-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+       <h1 class="header-title">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
        <address class="header-contacts">
-         <a class="header-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a><br>
+         <a class="header-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
        </address>
        <div class="account">
@@ -41,7 +41,7 @@
      </div>
      <nav class="main-navigation">
        <ul class="site-navigation container reset-list">
-         <li><a href="index.html" class="site-navigation-item" href="#">Главная</a></li>
+         <li><a class="site-navigation-item" href="index.html">Главная</a></li>
          <li><a class="site-navigation-item" href="#">Компания</a></li>
          <li><a class="site-navigation-item" href="#">Каталог</a></li>
          <li><a class="site-navigation-item" href="#">Новости</a></li>
@@ -55,7 +55,7 @@
    <main>
      <div class="container">
        <ul class="breadcrumbs reset-list">
-       <li><a href="index.html"><img src="img/icon/icon-home.svg" alt="На главную"></a></li>
+       <li><a href="index.html"><img src="img/icon-home.svg" alt="На главную"></a></li>
        <li><a href="#">Каталог</a></li>
        <li><a href="#">Инструмент</a></li>
        <li><a href="#">Перфораторы</a></li>
@@ -87,8 +87,8 @@
             <fieldset class="filter-producer">
              <legend>Производители:</legend>
              <ul class="reset-list">
-               <li class="filter-option">
-                 <input class="filter-input filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch" checked>
+              <li class="filter-option">
+                 <input class="filter-input filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosh" checked>
                  <label for="filter-bosh">Bosch</label>
                </li>
                <li class="filter-option">
@@ -269,8 +269,8 @@
 
    <footer class="main-footer">
     <div class="footer-header container">
-      <div class="footer-contacts">
-        <a class="footer-logo"><img src="img/icon/logo-technomart.svg" width="138" height="23" alt="Логотип магазина ТЕХНОМАРТ"></a>
+      <div class="footer-top">
+        <a class="footer-logo"><img src="img/logo-technomart.svg" width="138" height="23" alt="Логотип магазина ТЕХНОМАРТ"></a>
         <address class="footer-contacts">
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           <a class="footer-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
