--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <div class="header-top-wrapper container">
          <a class="header-logo"><img src="img/logo-technomart.svg" width="109" height="19" alt="Логотип магазина ТЕХНОМАРТ"></a>
          <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-          <input class="search-input" type="search" value="Поиск:" id="header-search">
+          <input class="search-input" type="search" placeholder="Поиск:" id="header-search">
           <label for="header-search"><span class="visually-hidden">Поиск</span></label>
          </form>
          <ul class="header-list reset-list">
@@ -322,15 +322,13 @@
         <button class="btn btn-basic" type="submit">Отправить</button>
       </div>
     </form>
-    <button class="modal-close" aria-label="Закрыть модальное окно"><span></span></button>
+    <button class="modal-close" aria-label="Закрыть модальное окно"></button>
   </section>
 
   <section class="modal modal-map">
-    <h2 class="visually-hidden title">
-      Как до нас добраться
-    </h2>
+    <h2 class="visually-hidden title">Как до нас добраться</h2>
     <img src="img/big-map.jpg" width="940" height="446" alt="Офис компании по адресу Большая Конюшенная 19/8, Санкт-Петербург">
-    <button class="modal-close" aria-label="Закрыть модальное окно"><span></span></button>
+    <button class="modal-close" aria-label="Закрыть модальное окно"></button>
   </section>
   <script src="js/script.js"></script>
   </body>
