Работа над ошибками 006

--- a/catalog.html
+++ b/catalog.html
@@ -340,6 +340,7 @@
      </div>
      <button class="modal-close" aria-label="Закрыть модальное окно"></button>
    </section>
+   <script src="js/script.js"></script>
 
 </body>
 </html>
