--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
        <a class="btn btn-basic" href="#">Все производители</a>
      </div>
      <div class="brand-list">
-       <a class="brand-item" href="#"><img src="img/brand-bosch.jpg" alt="Bosch"></a>
-       <a class="brand-item" href="#"><img src="img/brand-makita.jpg" alt="makita"></a>
-       <a class="brand-item" href="#"><img src="img/brand-dewalt.jpg" alt="dewalt"></a>
-       <a class="brand-item" href="#"><img src="img/brand-interscol.jpg" alt="интерскол"></a>
-       <a class="brand-item" href="#"><img src="img/brand-hitachi.jpg" alt="hitachi"></a>
-       <a class="brand-item" href="#"><img src="img/brand-lg.jpg" alt="lg"></a>
-       <a class="brand-item" href="#"><img src="img/brand-aeg.jpg" alt="aeg"></a>
-       <a class="brand-item" href="#"><img src="img/brand-metabo.jpg" alt="metabo"></a>
+       <a class="brand-item" href="#"><img src="img/brand-bosch.jpg" width="126" height="37" alt="Bosch"></a>
+       <a class="brand-item" href="#"><img src="img/brand-makita.jpg" width="123" height="40" alt="makita"></a>
+       <a class="brand-item brand-item-dewalt" href="#"><img src="img/brand-dewalt.jpg" width="146" height="44" alt="dewalt"></a>
+       <a class="brand-item brand-item-interscol" href="#"><img src="img/brand-interscol.jpg" width="200" height="88" alt="интерскол"></a>
+       <a class="brand-item" href="#"><img src="img/brand-hitachi.jpg" width="169" height="31" alt="hitachi"></a>
+       <a class="brand-item" href="#"><img src="img/brand-lg.jpg" width="121" height="73" alt="lg"></a>
+       <a class="brand-item" href="#"><img src="img/brand-aeg.jpg" width="151" height="96" alt="aeg"></a>
+       <a class="brand-item brand-item-metabo" href="#"><img src="img/brand-metabo.jpg" width="204" height="69" alt="metabo"></a>
      </div>
    </section>
 
@@ -307,7 +307,7 @@
       <div class="modal-write-us-menu">
         <div class="write-us-user">
           <label for="user-name">Ваше имя:</label>
-          <input id="user-name" type="text" name="name" placeholder="Имя Фамилия" value="" required>
+          <input id="user-name" type="text" name="name" placeholder="Имя Фамилия" required>
         </div>
         <div>
           <label for="user-email">Ваш e-mail:</label>
@@ -328,8 +328,7 @@
   <section class="modal modal-map">
     <h2 class="visually-hidden title">Как до нас добраться</h2>
     <iframe src="https://yandex.ru/map-widget/v1/-/CCCtu2YJ" width="940" height="446" frameborder="1" allowfullscreen="true"></iframe>
-    <img src="img/big-map.jpg" width="940" height="446" alt="Офис компании по адресу Большая Конюшенная 19/8, Санкт-Петербург">
-    <button class="modal-close" aria-label="Закрыть модальное окно"></button><!--Добавить задним фоном, проверить тень-->
+    <button class="modal-close" aria-label="Закрыть модальное окно"></button>
   </section>
 
    <section class="modal modal-cart">
