--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
   <section class="modal modal-map">
     <h2 class="visually-hidden title">Как до нас добраться</h2>
-    <iframe src="https://yandex.ru/map-widget/v1/-/CCCtu2YJ" width="940" height="446" frameborder="1" allowfullscreen="true"></iframe>
+    <iframe src="https://yandex.ru/map-widget/v1/-/CCCtu2YJ" width="940" height="446"></iframe>
     <button class="modal-close" aria-label="Закрыть модальное окно"></button>
   </section>
 
