--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
    <header class="main-header">
@@ -65,8 +65,8 @@
        </div>
 
        <div class="product-slider">
-         <input class="visually-hidden" type="radio" id="slid-1" name="product-slider" checked>
-         <input class="visually-hidden" type="radio" id="slid-2" name="product-slider">
+         <input class="visually-hidden" type="radio" id="slid-1" name="product-slider">
+         <input class="visually-hidden" type="radio" id="slid-2" name="product-slider" checked>
          <div class="product-slider-label">
            <label for="slid-1"></label>
            <label for="slid-2"></label>
@@ -74,13 +74,13 @@
          <a class="slider-btn slider-btn-prev" href="#"><span class="visually-hidden">Назад</span></a>
          <a class="slider-btn slider-btn-next" href="#"><span class="visually-hidden">Вперед</span></a>
          <div class="slider-item-1">
-           <h3 class="title">Дрели</h3>
-           <p>Соседям на радость!</p>
+           <h3 class="title">Перфораторы</h3>
+           <p>Настоящие мужские игрушки</p>
            <a class="btn btn-basic" href="#">Открыть каталог</a>
          </div>
          <div class="slider-item-2">
-           <h3 class="title">Перфораторы</h3>
-           <p>Настоящие мужские игрушки</p>
+           <h3 class="title">Дрели</h3>
+           <p>Соседям на радость!</p>
            <a class="btn btn-basic" href="#">Открыть каталог</a>
          </div>
        </div>
@@ -340,6 +340,6 @@
      </div>
      <button class="modal-close" aria-label="Закрыть модальное окно"></button>
    </section>
-   <script src="js/script.js"></script>
+   <script src="js/script.min.js"></script>
   </body>
 </html>
