--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body class="inner-page">
   <header class="main-header">
@@ -35,7 +35,7 @@
            <a class="profile" href="#">Равшан Джамшутович</a>
            <a class="logout" href="#"><span class="visually-hidden">Выйти</span></a>
          </div>
-         <a class="account-link link--cart" href="#">Мои заказы</a>
+         <a class="account-link link-cart" href="#">Мои заказы</a>
          <a class="account-link" href="#">Личный кабинет</a>
        </div>
      </div>
@@ -55,7 +55,7 @@
    <main>
      <div class="container">
        <ul class="breadcrumbs reset-list">
-       <li><a href="index.html"><img src="img/icon-home.svg" alt="На главную"></a></li>
+       <li><a href="index.html"><img src="img/icon-home.svg" width="15" height="12" alt="На главную"></a></li>
        <li><a href="#">Каталог</a></li>
        <li><a href="#">Инструмент</a></li>
        <li><a href="#">Перфораторы</a></li>
@@ -340,7 +340,7 @@
      </div>
      <button class="modal-close" aria-label="Закрыть модальное окно"></button>
    </section>
-   <script src="js/script.js"></script>
+   <script src="js/script.min.js"></script>
 
 </body>
 </html>
